--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,8 @@ DATABASE_NAME=connect
 DATABASE_AUTO_LOAD_ENTITES=true
 DATABASE_SYNCHRONIZE_ENTITES=false
 
+# ELSE
+JWT_SECRET=secret
+PORT=8001
+PORT_HTTPS=443
+FRONTEND_URL_CORS=http://localhost:3002
